<resources>
  <string name="app_name">commons-jpegtran-demo</string>
  <string name="button_open">Open</string>
  <string name="button_save">Save</string>
  <string name="button_about">About</string>
  <string name="button_crop">Crop</string>
  <string name="button_">Flip</string>
  <string name="button_rotate">Rotate</string>
  <string name="button_blur">blur</string>
  <string name="mess_error_readfile">Can\'t open input file</string>
  <string name="mess_nopermission_location">No permission to access the geotags in JPEG. So they will be lost by the operation in somecase.</string>
  <string name="mess_nopermission">No permission to access the storage.\nThe permission can be changed by settings (application).</string>
  <string name="mess_error_file">Can\'t open file</string>
  <string name="mess_success">Success to output</string>
  <string name="main_ijg">This software is based in part on the work of the Independent JPEG Group.</string>
</resources>