<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".MainActivity"
  android:orientation="vertical"
  android:weightSum="10">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_weight="1">

    <LinearLayout
      android:layout_margin="4dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <Button
        android:id="@+id/button_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/button_open" />

      <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/button_save" />

      <Button
        android:id="@+id/button_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/button_about" />
    </LinearLayout>

    <TextView
      android:layout_margin="4dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/text_view" />

  </LinearLayout>

  <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="8"
    android:gravity="top">

    <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@android:drawable/ic_menu_report_image"
        android:id="@+id/imageView"
        android:scaleType="fitCenter" />

      <fr.free.nrw.commons.commons_jpegtran_demo.BlurOverlayView
        android:id="@+id/blurOverlayView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

      <fr.free.nrw.commons.commons_jpegtran_demo.CropOverlayView
        android:id="@+id/cropOverlayView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />
    </FrameLayout>
  </LinearLayout>

  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="2"
    android:id="@+id/transformations"
    android:gravity="center_horizontal">

    <Button
      android:id="@+id/button_crop"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="4dp"
      android:text="@string/button_crop" />

    <Button
      android:id="@+id/button_rotate"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="4dp"
      android:text="@string/button_rotate" />

    <Button
      android:id="@+id/button_blur"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="4dp"
      android:text="@string/button_blur" />
  </LinearLayout>

</LinearLayout>